--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=3000
 # 'sans-serif' , 'serif' , 'monospace', 'Arial', 'Courier New', 'Microsoft YaHei'
 FontFamily='Arial'
 LimitSize=2mb
-AllowRunFunc=true
+AllowRunFunc=false
 VERSION=1.0.0
